# swing-bot-tutorial

./: .env.example  .gitignore  MACross.html  README.md  alembic.ini  main.py  pyproject.toml
alembic_migrations/: __init__.py  env.py
alembic_migrations/versions/: 11a8299a43ee_create_options_contracts_and_quotes_.py  fb5aed732e02_add_contract_metadata_fields.py
core/: __init__.py  config.py  database.py  db_models.py  logging_config.py
data_ingestion/: __init__.py  openbb_ingestor.py  polygon_ingestor.py  yfinance_ingestor.py
scripts/: __init__.py  option_pricer.py  run_openbb_historical_ingestion.py  run_polygon_historical_ingestion.py
