[project]
name = "swing-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "backtesting>=0.6.4",
    "jupyterlab>=4.4.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "quantlib>=1.38",
    "yfinance>=0.2.58",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
