[project]
name = "swing-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backtesting>=0.6.4",
    "pandas>=2.2.3",
    "yfinance>=0.2.58",
    "matplotlib>=3.10.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
